# inertia-loco

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
src/: config.rs  initializer.rs  lib.rs  request.rs  response.rs  tera.rs
test-assets/: layout.html
test-assets/.dist/: manifest.json
