[package]
name = "inertia-loco"
version = "0.1.0"
edition = "2021"
authors = ["Mason Stallmo <masonstallmo@hey.com>"]
license = "MIT OR Apache-2.0"
description = "An implementation of the Inertia.js protocol for Loco"
repository = "https://github.com/mstallmo/inertia-loco"
keywords = ["loco", "inertia"]

[dependencies]
axum = "0.7.5"
async-trait = "0.1.74"
http = "1.0.0"
hyper = "1.0.1"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
indoc = "2.0.4"
sha1 = "0.10.6"
hex = "0.4.3"
maud = "0.25.0"

[dev-dependencies]
reqwest = "0.11.22"
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["set-header", "trace"] }
http-body-util = "0.1.0"
